<resources>
    <string name="app_name">Activities</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid name</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">Settings</string>
    <string name="display_text">Display Text</string>
    <string name="gif_image">activities_gif</string>

    <!-- Registration Titles -->
    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="close_app">Close app</string>
    <string name="logout">Logout</string>
    <string name="post_activity">Post activity</string>
    <string name="radiobutton">RadioButton</string>
    <string name="describe_your_activity">Describe your activity</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="activity_for">Activity for</string>
    <string name="both">Both</string>
    <string name="gender">Gender</string>
    <string name="post">Post</string>
    <string name="group">Group</string>
    <string name="single">Single</string>
    <string name="activity_selection">Activity Selection</string>
    <string name="activity_description">Activity Description</string>
    <string name="activity_forpost">Activity for:</string>
    <string name="click_to_search">Click to Search</string>
    <string name="what_kind_of_activity_you_looking_for">What kind of activity are you looking for ?</string>
    <string name="post_your_own_activity">Post New Activity</string>
    <string name="find_existing_activity">Find Activity</string>
    <string name="sign_up">Sign-up</string>
    <string name="welcome_to_activities">Welcome to Activities</string>
    <string name="string_search">Search</string>
    <string name="search_by_id">Search by id</string>
    <string name="gender_selection">Gender selection</string>
    <string name="apartment_number">Apartment number</string>
    <string name="activity_name">Activity Name</string>
    <string name="cyty_settelment">Cyty/Settelment</string>
    <string name="type">Type</string>
    <string name="street">Street</string>
    <string name="difficulty">Difficulty</string>
    <string name="activity_forFirstStepPost">Activity for:</string>
    <string name="nextFirstStepPost">Next</string>
    <string name="time_and_location">Time and Location</string>
    <string name="enter_date">Enter date</string>
    <string name="finish_registration">Finish Registration</string>
    <string name="filling_in_the_next_fields_is_recommended_in_order_to_increase_your_credibility_as_an_activity_advertiser">Filling in the next fields is recommended in order to increase your credibility as an activity advertiser.</string>
    <string name="what_are_you_planning_to_do_here">What are you planning to do here?</string>
    <string name="search_and_join_activities">Search and join activities</string>
    <string name="both_post_and_search_activities">Both post and search activities</string>
    <string name="what_is_your_occupation">What is your occupation?</string>
    <string name="relevant_education">Relevant education:</string>
    <string name="the_name_of_the_activity">The name of the activity</string>
    <string name="name">Name</string>
    <string name="enter_activity_name">Enter activity name</string>
    <string name="activity_type">Activity Type</string>
    <string name="enter_details">Enter details</string>
    <string name="register">Register</string>
    <string name="activities">Activities</string>
    <string name="click_to_login">Click to login</string>
    <string name="when_were_you_born">When were you born?</string>
    <string name="done">done</string>
    <string name="complete_registration">complete registration</string>
    <string name="the_selected_date">The selected date:</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="registration">Registration</string>
    <string name="next">Next</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="i_am_a">I am a</string>
    <string name="dd_mm_yyy">dd/mm/yyy</string>
    <string name="add_date">Add date</string>
    <string name="textview">TextView</string>
    <string name="the_choosen_date">The choosen date:</string>
</resources>
