<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firstStepPostActivity">

    <TextView
        android:id="@+id/difficultyTextView"
        android:layout_width="133dp"
        android:layout_height="38dp"
        android:text="@string/difficulty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261" />

    <Spinner
        android:id="@+id/difficultySpinner"
        android:layout_width="188dp"
        android:layout_height="39dp"
        android:layout_marginEnd="72dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/difficultyTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/difficultyTextView"
        app:layout_constraintTop_toTopOf="@+id/difficultyTextView"
        app:layout_constraintVertical_bias="0.274" />

    <TextView
        android:id="@+id/desctibeActivityFirstStepPost"
        android:layout_width="252dp"
        android:layout_height="32dp"
        android:text="@string/describe_your_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58" />

    <EditText
        android:id="@+id/editTextDescribeApp"
        android:layout_width="251dp"
        android:layout_height="128dp"
        android:layout_margin="3dp"
        android:background="@android:color/white"
        android:ems='10'
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLines="10"
        android:minLines="6"
        android:scrollbars="vertical"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/desctibeActivityFirstStepPost"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/desctibeActivityFirstStepPost"
        app:layout_constraintTop_toBottomOf="@+id/desctibeActivityFirstStepPost"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/activityNameTextView"
        android:layout_width="133dp"
        android:layout_height="29dp"
        android:text="@string/activity_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <EditText
        android:id="@+id/activityNameEditText"
        android:layout_width="222dp"
        android:layout_height="29dp"
        android:background="@android:color/white"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/activityNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/activityNameTextView"
        app:layout_constraintTop_toTopOf="@+id/activityNameTextView"
        app:layout_constraintVertical_bias="0.116" />

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="186dp"
        android:layout_height="39dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/typeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/typeTextView"
        app:layout_constraintTop_toTopOf="@+id/typeTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="134dp"
        android:layout_height="36dp"
        android:text="@string/type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179" />

    <TextView
        android:id="@+id/describeActivityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/describe_your_activity"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/changeToPostActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextFirstStepPost"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="149dp"
        android:layout_height="106dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/genderTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/genderTextView"
        app:layout_constraintTop_toBottomOf="@+id/genderTextView"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/rbBoth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/both" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rgActivityFor"
        android:layout_width="136dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/activityForTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/activityForTextView"
        app:layout_constraintTop_toBottomOf="@+id/activityForTextView"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/rbSingle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/single" />

        <RadioButton
            android:id="@+id/rbGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group" />
    </RadioGroup>

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="149dp"
        android:layout_height="38dp"
        android:text="@string/gender"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353" />

    <TextView
        android:id="@+id/activityForTextView"
        android:layout_width="136dp"
        android:layout_height="36dp"
        android:text="@string/activity_forFirstStepPost"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352" />

    <Button
        android:id="@+id/logoutFirstStepPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973" />

    <Button
        android:id="@+id/closeAppFirstStepPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />
</androidx.constraintlayout.widget.ConstraintLayout>