<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".PostActivitiyJava.GroupPostActivity">

    <RadioGroup
        android:id="@+id/rgGroupSingle"
        android:layout_width="136dp"
        android:layout_height="80dp"
        android:checkedButton="@+id/rbGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/genderTextView"
        app:layout_constraintStart_toStartOf="@+id/genderTextView"
        app:layout_constraintTop_toBottomOf="@+id/genderTextView"
        app:layout_constraintVertical_bias="0.217">

        <RadioButton
            android:id="@+id/rbSingle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/single" />

        <RadioButton
            android:id="@+id/rbGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group" />
    </RadioGroup>

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:text="@string/activity_for"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

    <Button
        android:id="@+id/nextToDescribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgGroupSingle"
        app:layout_constraintVertical_bias="0.604" />
</androidx.constraintlayout.widget.ConstraintLayout>