<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/background_style1"
    tools:context=".ui.postActivitiyJava.GenderPostActivity">

    <RadioGroup
        android:id="@+id/rgGenderAdvanced"
        android:layout_width="149dp"
        android:layout_height="106dp"
        android:checkedButton="@+id/rbBoth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/genderTextView"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/genderTextView"
        app:layout_constraintTop_toBottomOf="@+id/genderTextView"
        app:layout_constraintVertical_bias="0.26">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/rbBoth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/both" />
    </RadioGroup>

    <Button
        android:id="@+id/nextToGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        style="@style/button_rectangle_gray_no_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgGenderAdvanced"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/genderTextView"
        style="@style/text_view_style"
        android:layout_width="371dp"
        android:layout_height="35dp"
        android:text="Activity gender suitable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

</androidx.constraintlayout.widget.ConstraintLayout>